--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"autoprefixer": "^9.7.4",
 		"nerv-devtools": "^1.5.6",
 		"nervjs": "^1.5.6",
+		"taro-ui": "^2.2.4",
 		"webpack-sources": "^1.4.3"
 	},
 	"devDependencies": {
@@ -69,5 +70,10 @@
 		"@typescript-eslint/eslint-plugin": "^2.13.0",
 		"@typescript-eslint/parser": "^2.13.0",
 		"typescript": "^3.0.1"
+	},
+	"globals": {
+		"wx": true,
+		"exports": true,
+		"require": true
 	}
 }
