--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@tarojs/async-await": "^2.0.4",
     "@tarojs/components": "2.0.3",
     "@tarojs/components-qa": "2.0.3",
     "@tarojs/redux": "^2.0.4",
@@ -72,6 +71,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-jsx-stylesheet": "^0.6.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "eslint": "^5.16.0",
     "eslint-config-taro": "2.0.3",
@@ -82,6 +82,7 @@
     "stylelint": "9.3.0",
     "stylelint-config-taro-rn": "2.0.3",
     "stylelint-taro-rn": "2.0.3",
-    "typescript": "^3.0.1"
+    "typescript": "^3.0.1",
+    "webpack-bundle-analyzer": "^3.6.0"
   }
 }
