云函数相互调用示例成功，云数据库自动备份成功

--- a/cloudfunctions/backdb/config.json
+++ b/cloudfunctions/backdb/config.json
@@ -1,5 +1,12 @@
 {
   "permissions": {
     "openapi": []
-  }
+  },
+  "triggers": [
+    {
+      "name": "backdb_trigger",
+      "type": "timer",
+      "config": "0 0 4 * * 0 *"
+    }
+  ]
 }
