--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^1.6.1",
     "eslint-plugin-taro": "2.0.3",
+    "jest": "^25.1.0",
     "stylelint": "9.3.0",
     "stylelint-config-taro-rn": "2.0.3",
     "stylelint-taro-rn": "2.0.3",
