--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "dev:h5": "npm run build:h5 -- --watch",
     "dev:rn": "npm run build:rn -- --watch",
     "dev:qq": "npm run build:qq -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch"
+    "dev:quickapp": "npm run build:quickapp -- --watch",
+    "test": "jest"
   },
   "author": "",
   "license": "MIT",
@@ -60,8 +61,11 @@
     "webpack-sources": "^1.4.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-typescript": "^7.8.3",
     "@tarojs/mini-runner": "2.0.3",
     "@tarojs/webpack-runner": "2.0.3",
+    "@types/jest": "^25.1.3",
     "@types/react": "^16.4.6",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
@@ -73,6 +77,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
+    "babel-jest": "^25.1.0",
     "eslint": "^5.16.0",
     "eslint-config-taro": "2.0.3",
     "eslint-plugin-import": "^2.12.0",
@@ -83,6 +88,7 @@
     "stylelint": "9.3.0",
     "stylelint-config-taro-rn": "2.0.3",
     "stylelint-taro-rn": "2.0.3",
+    "ts-jest": "^25.2.1",
     "typescript": "^3.0.1",
     "webpack-bundle-analyzer": "^3.6.0"
   }
