--- a/package.json
+++ b/package.json
@@ -71,13 +71,14 @@
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
     "babel-eslint": "^8.2.3",
+    "babel-jest": "^25.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-jsx-stylesheet": "^0.6.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
-    "babel-jest": "^25.1.0",
+    "cz-conventional-changelog": "^3.1.0",
     "eslint": "^5.16.0",
     "eslint-config-taro": "2.0.3",
     "eslint-plugin-import": "^2.12.0",
@@ -91,5 +92,10 @@
     "ts-jest": "^25.2.1",
     "typescript": "^3.0.1",
     "webpack-bundle-analyzer": "^3.6.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
