feat(cloud): backdb增加job查询，其他功能全部放在common中

--- a/cloudfunctions/backdb/config.json
+++ b/cloudfunctions/backdb/config.json
@@ -4,9 +4,9 @@
   },
   "triggers": [
     {
-      "name": "backdb_trigger",
+      "name": "backdb",
       "type": "timer",
-      "config": "0 0 4 * * 0 *"
+      "config": "0 0 4 * * MON *"
     }
   ]
 }
