--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "resolveJsonModule": true,
     "typeRoots": [
       "node_modules/@types",
+      "src/types",
       "global.d.ts"
     ],
     "paths": {
